# nexus-ai-

./: .dockerignore  .env.example  .gitignore  Dockerfile  Nexus_Overview.pptx  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/: README.md
.github/workflows/: ci-cd.yml  ci.yml
config/: agents.yaml
config/environment/: .env.example
deploy/docker/: .dockerignore  Dockerfile
docs/: ops-backup-restore.md  ops-caddy-security-headers.md  overview.md  production-journal.html
docs/technical/: ARCHITECTURE.md  index.html
exports/: Nexus_Production_Deep_Dive.pptx
project/: .dockerignore  .gitignore  COMMERCIAL_LICENSE.md  LICENSE  Nexus_Overview.pptx  README.md  SECURITY.md  TRADEMARKS.md  pyproject.toml
project/config/: agents.yaml
project/config/environment/: .env.example
project/config/evaluation/: test_cases.json
project/data/knowledge_base/: nexus_support.md
project/deploy/docker/: Caddyfile  docker-compose.staging.yml  docker-compose.yml  gunicorn.conf.py
project/docs/: deploy-oracle-duckdns.md  ops-backup-restore.md  ops-monitoring.md  ops-vm-recovery.md  overview.md  saas-hosted.md
project/docs/compliance/: hipaa-readiness.md
project/docs/technical/: index.html
project/exports/: Nexus_LinkedIn_Launch.pptx  Nexus_Production_Deep_Dive.pptx
project/scripts/: audit_deps.py  backup.sh  build_linkedin_ppt.py  capture_mode_screenshots.py  pre-launch-check.sh  recover-production.sh  restart_local.sh
project/sdk/: README.md
project/sdk/android/: NexusChat.kt
project/sdk/ios/: NexusChat.swift
project/src/: __init__.py  analytics.py  auth.py  config.py  database.py  logging_config.py  main.py  request_context.py  tasks.py
project/src/agents/: __init__.py  tools.py
project/src/api/: __init__.py  auth_routes.py  chat_routes.py  cx_routes.py  deps.py  enterprise_routes.py  integration_routes.py  oidc_routes.py  ops_routes.py  portal_routes.py  saas_routes.py  session_manager.py  telephony_routes.py
project/src/evaluation/: __init__.py
project/src/ha/: region.py
project/src/integrations/: __init__.py  asana.py  copper.py  email_channel.py  guru.py  jira.py  meta_messaging.py  secrets_vault.py  slack.py  translation.py  whatsapp.py
project/static/: brand-logos.js  contact.html  cx.css  cx.js  enterprise.css  enterprise.js  faq.html  index.html  integrations.html  landing.css  landing.html  landing.js  nexus-widget.js  portal.html  pricing.html  signup.html
project/tests/: conftest.py  test_api_endpoints.py  test_comprehensive_e2e.py  test_integrations_api.py  test_integrations_clients.py  test_landing_static.py  test_plan_gates.py  test_prompt_messages.py  test_security.py  test_twilio_handler.py
scripts/: backup.sh  build_production_ppt.py  ci.sh  demo.py  deploy-public.sh  generate_ppt.py  install-docker.sh  run.sh  run_evaluation.py  setup-backup-timer.sh  setup-nexus-systemd-oraclelinux.sh  setup-oracle-vm.sh
src/: __init__.py  auth.py  cache.py  config.py  database.py  main.py  middleware.py  observability.py  sqlite_compat.py
src/agents/: tools.py
src/api/: __init__.py  admin_routes.py  auth_routes.py  chat_routes.py  deps.py  integration_routes.py  kb_routes.py  ops_routes.py  routes.py  session_manager.py  telephony_routes.py
src/evaluation/: evaluator.py
src/integrations/: __init__.py  secrets_vault.py  webhooks.py
src/llm/: __init__.py  factory.py
src/prompts/: __init__.py  templates.py
src/rag/: vector_store.py
src/telephony/: __init__.py  stt.py  twilio_handler.py
src/workflows/: __init__.py  orchestrator.py
static/: index.html
tests/: conftest.py  test_api_endpoints.py  test_comprehensive_e2e.py  test_evaluator_containment.py  test_integrations_api.py  test_integrations_clients.py  test_orchestrator.py  test_secrets_vault.py  test_session_manager.py  test_vector_store.py
tests/e2e/: conftest.py  test_user_journey.py
(+20 files in other folders)
