[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-voice-agents"
version = "2.0.0"
description = "Production-grade enterprise AI agent platform for voice, chat, and copilot operations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Shubham RSY" }]
keywords = ["voice-agents", "langchain", "fastapi", "rag", "telephony", "twilio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "tiktoken>=0.8.0",
    "twilio>=9.3.0",
    "httpx>=0.27.0",
    "aiohttp>=3.10.0",
    "pyyaml>=6.0.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "cryptography>=43.0.0",
    "pyjwt>=2.9.0",
    "redis>=5.2.0",
    "websockets>=12.0",
    "prometheus-client>=0.19.0",
    "celery>=5.4.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-rerunfailures>=14.0",
]

[project.urls]
Homepage = "https://github.com/ShubhamRSY/voice-agents"
Repository = "https://github.com/ShubhamRSY/voice-agents"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.coverage.run]
data_file = "reports/coverage/.coverage"
branch = true

[tool.coverage.html]
directory = "reports/coverage/html"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

[tool.coverage.report]
show_missing = true

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
show_error_codes = true

# Suppress noisy false positives from third-party stubs
disable_error_code = [
    "var-annotated",     # ~35 instances: `conn` vars in contextmanager (mypy can't infer)
]

# Allow untyped decorators and bare Except
allow_untyped_decorators = true

[[tool.mypy.overrides]]
module = [
    "src.llm.factory",
    "src.rag.vector_store",
    "src.integrations.slack",
]
# LangChain/chromadb stubs have kwarg mismatches with actual runtime APIs
disable_error_code = ["arg-type", "call-arg"]

[[tool.mypy.overrides]]
module = [
    "src.auth",
]
disable_error_code = ["arg-type", "attr-defined"]

[[tool.mypy.overrides]]
module = [
    "src.tasks",
    "src.api.ops_routes",
]
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = [
    "src.telephony.twilio_handler",
    "src.telephony.amazon_connect_handler",
]
disable_error_code = ["arg-type", "union-attr"]

[[tool.mypy.overrides]]
module = [
    "src.evaluation.evaluator",
]
disable_error_code = ["assignment", "misc"]

[[tool.mypy.overrides]]
module = [
    "src.rag.keyword_search",
]
disable_error_code = ["assignment"]

[[tool.mypy.overrides]]
module = [
    "src.config",
]
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = [
    "src.database",
]
disable_error_code = ["arg-type", "misc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "e2e: end-to-end user journey tests",
    "nfr: non-functional tests (performance, security, concurrency)",
]
